<resources>
    <string name="app_name">MaiCar</string>
    <string name="title_fuel">Fuel</string>
    <string name="title_maintenance">Maintenance</string>
    <string name="dialog_date">Date:</string>
    <string name="dialog_km">Current Km:</string>
    <string name="dialog_liters">Added Liters:</string>
    <string name="dialog_full_tank">Full Tank?</string>
    <string name="dialog_price">Total Price:</string>
    <string name="dialog_price_liter">Price per Liter:</string>
    <string name="dialog_maintenance_type">Type:</string>
    <string name="dialog_notes">Notes:</string>
    <string name="desc_add">add</string>
    <string name="desc_km">km</string>
    <string name="desc_liters">liters</string>
    <string name="desc_price">price</string>
    <string name="desc_mpg">mpg</string>
    <string name="desc_edit">edit</string>
    <string name="desc_delete">delete</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="display_km">%1s km</string>
    <string name="display_liters">%1.2f L</string>
    <string name="display_price2dec">%1.2f €</string>
    <string name="display_price4dec">%1.4f €</string>
    <string name="display_priceL4dec">%1.4f €/L</string>
</resources>