<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:rowCount="3"
    android:columnCount="6"
    android:padding="2dp">

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_row="0"
        android:layout_column="0"
        android:padding="2dp"/>

    <ImageView
        android:id="@+id/kmIconImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_row="0"
        android:layout_column="1"
        android:padding="1dp"
        android:contentDescription="@string/desc_km"
        />

    <TextView
        android:id="@+id/kmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_row="0"
        android:layout_column="2"
        android:padding="1dp"/>

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_edit"
        android:src="@drawable/ic_pencil_24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_row="0"
        android:layout_column="4"
        android:padding="1dp"/>

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_delete"
        android:src="@drawable/ic_bin_24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_row="0"
        android:layout_column="5"
        android:padding="1dp" />

    <ImageView
        android:id="@+id/priceIconImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_row="1"
        android:layout_column="0"
        android:padding="1dp"
        android:contentDescription="@string/desc_price"
        />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_row="1"
        android:layout_column="1"
        android:padding="1dp"/>

    <ImageView
        android:id="@+id/typeIconImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_row="1"
        android:layout_column="2"
        android:padding="1dp"
        android:contentDescription="@string/desc_price"
        />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_row="1"
        android:layout_column="3"
        android:padding="1dp"/>

    <TextView
        android:id="@+id/notesTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_row="2"
        android:layout_column="0"
        android:padding="1dp"
        android:ellipsize="none"
        android:maxEms="8"
        />

</GridLayout>