<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:rowCount="3"
    android:columnCount="4"
    android:padding="2dp">

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_row="0"
        android:layout_column="0"
        android:padding="2dp"/>

    <ImageView
        android:id="@+id/kmIconImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_row="0"
        android:layout_column="1"
        android:padding="1dp"
        android:contentDescription="@string/desc_km"
        />

    <TextView
        android:id="@+id/kmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_row="0"
        android:layout_column="2"
        android:padding="1dp"/>

    <TextView
        android:id="@+id/priceLiterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_row="1"
        android:layout_column="0"
        android:padding="1dp" />

    <ImageView
        android:id="@+id/priceIconImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_row="1"
        android:layout_column="1"
        android:padding="1dp"
        android:contentDescription="@string/desc_price"
        />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_row="1"
        android:layout_column="2"
        android:padding="1dp"/>

    <ImageView
    android:id="@+id/literIconImageView"
    android:layout_width="24dp"
    android:layout_height="24dp"
    android:layout_row="2"
    android:layout_column="0"
        android:padding="1dp"
        android:contentDescription="@string/desc_liters"
    />

    <TextView
        android:id="@+id/literTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_row="2"
        android:layout_column="1"
        android:padding="1dp"/>

    <ImageView
        android:id="@+id/mpgIconImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_row="2"
        android:layout_column="2"
        android:padding="1dp"
        android:contentDescription="@string/desc_mpg"
        />

    <TextView
        android:id="@+id/mpgTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_row="2"
        android:layout_column="3"
        android:padding="1dp"/>

    <!-- todo add modify and delete buttons per item row with id/pos reference
    <ImageButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="A tiny Android icon"
          android:src="@drawable/baseline_android_24"
          app:tint="#ff0000" />
          -->
</GridLayout>